[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zenn-export"
version = "0.1.0"
description = "Export Zenn articles and books as Markdown files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests",
    "html2text",
]

[project.scripts]
zenn-export = "zenn_export.cli:main"

[tool.setuptools.packages.find]
include = ["zenn_export*"]

[project.urls]
Repository = "https://github.com/nakamura196/zenn-export"
